# metascaler-hack

./: .dockerignore  .gitignore  .openenvignore  BLOG.md  BOOTSTRAP.md  Dockerfile  Makefile  README.md  app.py  client.py  eval.py  models.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  train.py  viz.py
docs/: anti-hacking.md  architecture.md  behavior-trace.md  curriculum.md  milp-formulation.md  reward-spec.md
notebooks/: demo.ipynb  train_hf_space.ipynb  train_kaggle.ipynb
results/: training_metrics.csv  training_metrics.json  training_summary.json
server/: Dockerfile  app.py  dsc_environment.py  models.py  policies.py
src/: env.py  models.py  policies.py  server.py  solver.py
stufftodo/: VIDEO.md  demo_animation.html
tests/: test_env.py  test_models.py  test_solver.py
trackio_space/: README.md  app.py  requirements.txt
